--- a/docs/database/mongo.ipynb
+++ b/docs/database/mongo.ipynb
@@ -7,20 +7,19 @@
    "source": [
     "# HDF5 + mongoDB\n",
     "\n",
-    "This database interface uses `pymongo` as the backend database.\n",
+    "This database interface uses `pymongo` as the backend database. The user communicates via the interface `h5rdmtoolbox.database.MongoDB`.\n",
     "\n",
-    "## Concept\n",
     "The idea is not to store all data in a mongoDB database. Then we would not have to write an HDF5 file in the first place.<br>\n",
     "We rather use the database as a **metadata storage**, which is much more efficient to search through. So the steps are:\n",
-    "1. insert (metadata) into the database (mongoDB)\n",
+    "1. insert (metadata) into the database (the interface takes care how this is done)\n",
     "2. perform query\n",
     "3. the interface collects performs query on mongoDB...\n",
-    "4. ...and returns a lazy HDF object to the user\n",
+    "4. ...and the interface returns a lazy HDF object to the user\n",
     "\n",
     "<!-- ![mongoDB_concept](mongoDB_concept.png) -->\n",
     "\n",
-    "<img src=\"mongoDB_concept.png\"\n",
-    "     alt=\"mongoDB_concept.png\"\n",
+    "<img src=\"../_static/mongoDB_concept.png\"\n",
+    "     alt=\"../_static/mongoDB_concept.png\"\n",
     "     style=\"margin-right: 10px; height: 200px;\" />\n",
     "     "
    ]
@@ -333,49 +332,49 @@
        "\n",
        "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
        "                    <li>\n",
-       "                        <input id=\"group-ds--8412548000\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--8412548000\">\n",
+       "                        <input id=\"group-ds--10766140700\" type=\"checkbox\" checked>\n",
+       "                        <label style=\"font-weight: bold\" for=\"group-ds--10766140700\">\n",
        "                        /<span>(5)</span></label>\n",
        "                  \n",
        "\n",
        "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 1.0.0</li>\n",
        "                    </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/correlation-8414269000\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/correlation-8414271400\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/correlation-8414271400\">correlation</label>\n",
+       "                <ul id=\"ds-1-/correlation-10768602900\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/correlation-10768606900\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/correlation-10768606900\">correlation</label>\n",
        "                    <span class=\"h5tb-dims\">(1797) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/digit-8414380400\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/digit-8414382600\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/digit-8414382600\">digit</label>\n",
+       "                <ul id=\"ds-1-/digit-10768764000\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/digit-10768768000\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/digit-10768768000\">digit</label>\n",
        "                    <span class=\"h5tb-dims\">(1797) [int32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/dissimilarity-8414458000\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/dissimilarity-8414460100\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/dissimilarity-8414460100\">dissimilarity</label>\n",
+       "                <ul id=\"ds-1-/dissimilarity-10768888700\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/dissimilarity-10768891200\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/dissimilarity-10768891200\">dissimilarity</label>\n",
        "                    <span class=\"h5tb-dims\">(1797) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/images-8414623100\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/images-8414625000\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/images-8414625000\">images</label>\n",
+       "                <ul id=\"ds-1-/images-10769172100\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/images-10769174900\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/images-10769174900\">images</label>\n",
        "                    <span class=\"h5tb-dims\">(digit: 1797, 8, 8) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
        "                </ul>\n",
        "\n",
-       "                <ul id=\"ds-1-/mean-8414694700\" class=\"h5tb-var-list\">\n",
-       "                    <input id=\"ds-2-/mean-8414696800\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
-       "                    <label class='h5tb-varname' for=\"ds-2-/mean-8414696800\">mean</label>\n",
+       "                <ul id=\"ds-1-/mean-10769317300\" class=\"h5tb-var-list\">\n",
+       "                    <input id=\"ds-2-/mean-10769321300\" class=\"h5tb-varname-in\" type=\"checkbox\" >\n",
+       "                    <label class='h5tb-varname' for=\"ds-2-/mean-10769321300\">mean</label>\n",
        "                    <span class=\"h5tb-dims\">(1797) [float32]</span>\n",
        "                <ul class=\"h5tb-attr-list\">\n",
        "                </ul>\n",
@@ -458,7 +457,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mdb = mongo.MongoDBInterface(collection=collection)\n",
+    "mdb = mongo.MongoDB(collection=collection)\n",
     "mdb.collection.drop()  # clean the collection just to be certain that it is really empty"
    ]
   },
@@ -686,7 +685,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x1d214859610>"
+       "<matplotlib.collections.QuadMesh at 0x2c6cd023e20>"
       ]
      },
      "execution_count": 16,
