date docs and update conventions along the way

--- a/docs/database/hdfDB.ipynb
+++ b/docs/database/hdfDB.ipynb
@@ -394,7 +394,7 @@
     "The first argument is the main filter argument. It is a dictionary, containing one or multiple keyword-value-pairs:\n",
     " - The simplest filter argument is the one we used above, which searches for the exact match of an attribute (in our case \"standard_name\") and its value (in our case \"velocity\").\n",
     " - To match a HDF5 dataset or group property, like the HDF5 internal path (`.name`) use \"\\\\$name\" for the keyword (mind the dollar sign!)\n",
-    " - Instead of the value, we could also provide an \"operator\", e.g. {\"\\\\$eq\": \"velocity\"}. An operator always starts with a \"\\\\$\"-sign. The above function called would look like this:<br>`db.find({'standard_name': {'$eq': 'velocity'}})`\n",
+    " - Instead of the value, we could also provide an \"operator\", e.g. `{$eq: \"velocity\"}`. An operator always starts with a \"`$`\"-sign. The above function called would look like this:<br>`db.find({'standard_name': {'$eq': 'velocity'}})`\n",
     " - We could have searched for HDF5 objects, which require multiple attribute key-value pairs to match. E.g. we could have queried for the units attribute, too:<br>\n",
     " `db.find({'standard_name': 'velocity', 'units': 'm/s'})`\n",
     "\n",
@@ -631,7 +631,7 @@
     "\n",
     "The regex query filter `\"{'$name': {'$regex': '^.*/velocity$'}}\"` means, that we are looking for \"basenames\" of objects, so not the full internal HDF5 path but the name.\n",
     "\n",
-    "All operator functions are stored in `database.hdfdb.query`. In fact, the \"\\\\$basename\"-operator exists, so we first delete it and add it again by our own function:"
+    "All operator functions are stored in `database.hdfdb.query`. In fact, the `\"$basename\"`-operator exists, so we first delete it and add it again by our own function:"
    ]
   },
   {
