cleanup unused code

--- a/docs/convention/examples/EngMeta.ipynb
+++ b/docs/convention/examples/EngMeta.ipynb
@@ -37,31 +37,7 @@
     {
      "data": {
       "text/plain": [
-       "\u001b[1mConvention(\"EngMeta\")\u001b[0m\n",
-       "contact: https://orcid.org/0000-0001-8729-0482\n",
-       "  File.__init__():\n",
-       "    * \u001b[1mcontact\u001b[0m:\n",
-       "\t\tName and contact information of a person or organization that can handle requiries about the data over a long time period.\n",
-       "    * \u001b[1mcreator\u001b[0m:\n",
-       "\t\tName and affiliation of the author(s) of the data. These are the persons who created the data.\n",
-       "    * \u001b[1mpid\u001b[0m:\n",
-       "\t\tPersistent identifier as URI, can ge further specified through a type and a scheme.\n",
-       "    * \u001b[1mtitle\u001b[0m:\n",
-       "\t\tA name or title by which a resource is known.\n",
-       "    * \u001b[3mcontributor\u001b[0m (default=None):\n",
-       "\t\tName and affiliation of all persons who contributed to the data.\n",
-       "    * \u001b[3mdescription\u001b[0m (default=None):\n",
-       "\t\tAll additional information that does not fit in any of the other categories. May be used for technical information. It is a best practice to supply a description.\n",
-       "    * \u001b[3mkeywords\u001b[0m (default=None):\n",
-       "\t\tList of describing keywords.\n",
-       "    * \u001b[3mdates\u001b[0m (default=None):\n",
-       "\t\tDates according to the data.\n",
-       "    * \u001b[3msubject\u001b[0m (default=None):\n",
-       "\t\tList of subjects the data belongs to.\n",
-       "    * \u001b[3mprovenance\u001b[0m (default=None):\n",
-       "\t\tInformation about the data provenance for replication: Who did what with which method with the data.\n",
-       "    * \u001b[3mrightsStatement\u001b[0m (default=None):\n",
-       "\t\trights information about the data, e.g. license, copyright, ..."
+       "Convention(\"EngMeta\")"
       ]
      },
      "execution_count": 1,
@@ -105,14 +81,7 @@
     {
      "data": {
       "text/plain": [
-       "{'name': FieldInfo(annotation=str, required=True),\n",
-       " 'givenName': FieldInfo(annotation=str, required=False),\n",
-       " 'familyName': FieldInfo(annotation=str, required=False),\n",
-       " 'address': FieldInfo(annotation=str, required=False),\n",
-       " 'affiliation': FieldInfo(annotation=str, required=False),\n",
-       " 'email': FieldInfo(annotation=str, required=False),\n",
-       " 'id': FieldInfo(annotation=str, required=False),\n",
-       " 'role': FieldInfo(annotation=contributorType, required=False)}"
+       "{'contributor': FieldInfo(annotation=personOrOrganization, required=True)}"
       ]
      },
      "execution_count": 3,
@@ -132,14 +101,16 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "personOrOrganization(name='Matthias Probst', givenName=None, familyName=None, address=None, affiliation=None, email=None, id='https://orcid.org/0000-0001-8729-0482', role=contributorType(value=<contributorType.Researcher: 'Researcher'>))"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "'name'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mcontact\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalidate\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mdict\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mMatthias Probst\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[43m                             \u001b[49m\u001b[38;5;28;43mid\u001b[39;49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mhttps://orcid.org/0000-0001-8729-0482\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[43m                             \u001b[49m\u001b[43mrole\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mResearcher\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\n\u001b[0;32m      4\u001b[0m \u001b[43m                             \u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32m~\\Documents\\programming\\GitHub\\h5RDMtoolbox\\h5rdmtoolbox\\convention\\standard_attributes.py:341\u001b[0m, in \u001b[0;36mStandardAttribute.validate\u001b[1;34m(self, value, parent, attrs)\u001b[0m\n\u001b[0;32m    339\u001b[0m _value \u001b[38;5;241m=\u001b[39m value\u001b[38;5;241m.\u001b[39mcopy()\n\u001b[0;32m    340\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m k, v \u001b[38;5;129;01min\u001b[39;00m value\u001b[38;5;241m.\u001b[39mitems():\n\u001b[1;32m--> 341\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalidator\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmodel_fields\u001b[49m\u001b[43m[\u001b[49m\u001b[43mk\u001b[49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mannotation \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m (\u001b[38;5;28mint\u001b[39m, \u001b[38;5;28mstr\u001b[39m, \u001b[38;5;28mfloat\u001b[39m, \u001b[38;5;28mbool\u001b[39m):\n\u001b[0;32m    342\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(v, \u001b[38;5;28mdict\u001b[39m):\n\u001b[0;32m    343\u001b[0m             _value[k] \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvalue\u001b[39m\u001b[38;5;124m'\u001b[39m: v}\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'name'"
+     ]
     }
    ],
    "source": [
@@ -151,21 +122,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "94d4146a-726c-4c46-aca6-7a771748c864",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "personOrOrganization(name='Matthias Probst', givenName=None, familyName=None, address=None, affiliation=None, email=None, id=None, role=None)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "contact.validate(dict(name='Matthias Probst',\n",
     "                             ), None)"
@@ -173,220 +133,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "d6837d44-1064-4d0b-aa37-09df20f5bbb8",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<head><style>/*\r\n",
-       "CSS inspired by xarray: https://github.com/pydata/xarray\r\n",
-       "*/\r\n",
-       ".h5tb-header > div,\r\n",
-       ".h5tb-header > ul {\r\n",
-       "    display: inline;\r\n",
-       "    margin-top: 0;\r\n",
-       "    margin-bottom: 0;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dataarray-cls,\r\n",
-       ".h5tb-dataarray-name {\r\n",
-       "    margin-left: 2px;\r\n",
-       "    margin-right: 10px;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dataarray-name {\r\n",
-       "    color: #000;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections {\r\n",
-       "    list-style: none;\r\n",
-       "    padding: 3px;\r\n",
-       "    margin: 0;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections input {\r\n",
-       "    display: none;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections label {\r\n",
-       "    display: inline;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections > li > input + label > span {\r\n",
-       "    display: inline;\r\n",
-       "    margin-left: 4px;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections > li > input:checked + label > span {\r\n",
-       "    display: none;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections input:enabled + label {\r\n",
-       "    cursor: pointer;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections input:not(.h5tb-values-in) ~ ul {\r\n",
-       "    display: none;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections input:not(.h5tb-values-in):checked ~ ul {\r\n",
-       "    display: block;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections > li > input + label {\r\n",
-       "    width: 140px;\r\n",
-       "    color: #555;\r\n",
-       "    font-weight: 500;\r\n",
-       "    padding: 4px 0 2px 0;\r\n",
-       "}\r\n",
-       "\r\n",
-       "\r\n",
-       ".h5grp-sections > li > input + label:before {\r\n",
-       "    display: inline-block;\r\n",
-       "    content: '+';\r\n",
-       "    font-size: 11px;\r\n",
-       "    width: 15px;\r\n",
-       "    text-align: center;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections > li > input:disabled + label:before {\r\n",
-       "    color: #777;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5grp-sections > li > input:checked + label:before {\r\n",
-       "    content: '-';\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dim-list {\r\n",
-       "    display: inline-block !important;\r\n",
-       "    list-style: none;\r\n",
-       "    padding: 0;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dim-list li {\r\n",
-       "    display: inline-block;\r\n",
-       "    padding: 0;\r\n",
-       "    margin: 0;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dim-list:before {\r\n",
-       "    content: '(';\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dim-list:after {\r\n",
-       "    content: ')';\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dim-list li:not(:last-child):after {\r\n",
-       "    content: ',';\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-has-index {\r\n",
-       "    text-decoration: underline;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-var-list {\r\n",
-       "    list-style: none;\r\n",
-       "    padding: 0;\r\n",
-       "    margin: 0;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-var-list > li {\r\n",
-       "    background-color: #fcfcfc;\r\n",
-       "    overflow: hidden;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-var-list > li:nth-child(odd) {\r\n",
-       "    background-color: #efefef;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-var-list li:hover {\r\n",
-       "    background-color: rgba(3, 169, 244, .2);\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-var-list li > span {\r\n",
-       "    display: inline-block;\r\n",
-       "}\r\n",
-       "\r\n",
-       "input.h5tb-varname-in + label {\r\n",
-       "    width: 140px;\r\n",
-       "    padding-left: 0;\r\n",
-       "    font-weight: bold;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dataset {\r\n",
-       "    width: 100px;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-attributevalue {\r\n",
-       "    width: 100px;\r\n",
-       "    text-align: left;\r\n",
-       "    color: #888;\r\n",
-       "    white-space: nowrap;\r\n",
-       "    font-size: 12px;\r\n",
-       "}\r\n",
-       "\r\n",
-       "input.h5tb-varname-in + label:before {\r\n",
-       "    content: ' ';\r\n",
-       "    display: inline-block;\r\n",
-       "    font-size: 11px;\r\n",
-       "    width: 15px;\r\n",
-       "    padding-left: 2px;\r\n",
-       "    padding-right: 2px;\r\n",
-       "    text-align: center;\r\n",
-       "    color: #aaa;\r\n",
-       "    text-decoration: none !important;\r\n",
-       "}\r\n",
-       "\r\n",
-       "input.h5tb-varname-in:enabled + label:hover:before {\r\n",
-       "    color: #000;\r\n",
-       "}\r\n",
-       "\r\n",
-       "input.h5tb-varname-in:checked + label:before {\r\n",
-       "    color: #ccc;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-dims {\r\n",
-       "    width: 280px;\r\n",
-       "    white-space: nowrap;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-attr-list {\r\n",
-       "    list-style: none;\r\n",
-       "    background-color: rgba(0,0,0,.0);\r\n",
-       "    padding-bottom: 6px;\r\n",
-       "    color: #6a6c73;\r\n",
-       "}\r\n",
-       "\r\n",
-       ".h5tb-attr-list li,\r\n",
-       ".h5tb-attr-list li:hover {\r\n",
-       "    background-color: rgba(0,0,0,.0);\r\n",
-       "}</style></head>\n",
-       "<div class='h5tb-warp'>\n",
-       "\n",
-       "              <ul style=\"list-style-type: none;\" class=\"h5grp-sections\">\n",
-       "                    <li>\n",
-       "                        <input id=\"group-ds--15793881400\" type=\"checkbox\" checked>\n",
-       "                        <label style=\"font-weight: bold\" for=\"group-ds--15793881400\">\n",
-       "                        /<span>(0)</span></label>\n",
-       "                  \n",
-       "\n",
-       "                    <ul class=\"h5tb-attr-list\"><li style=\"list-style-type: none; font-style: italic\">__h5rdmtoolbox_version__ : 0.11.0</li><li style=\"list-style-type: none; font-style: italic\">contact : name='Matthias Probst' givenName=None familyName=None address=None affiliation=None email=None id...</li><li style=\"list-style-type: none; font-style: italic\">creator : name='Matthias Probst' givenName=None familyName=None address=None affiliation=None email=None id...</li><li style=\"list-style-type: none; font-style: italic\">pid : id='123' type=pidTypes(value=<pidTypes.other: 'other'>) scheme=None</li><li style=\"list-style-type: none; font-style: italic\">title : Test file to demonstrate usage of EngMeta schema</li>\n",
-       "                    </ul>\n",
-       "</li>\n",
-       "</ul>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "with h5tbx.File(contact=dict(name='Matthias Probst'),\n",
     "                creator=dict(name='Matthias Probst',\n",
@@ -411,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "206c6ca0-35ac-4221-b626-d27e3abe4a02",
    "metadata": {},
    "outputs": [],
@@ -426,23 +176,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "6258751b-b488-45fd-a0b1-1f8dacca3b64",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'file_size': array(10552) <Unit('byte')>,\n",
-       " 'file_type': 'hdf5',\n",
-       " 'checksum': '72a399d75914328a923e8d22c3276270'}"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "extract_metadata(fname)"
    ]
