--- a/docs/wrapper/GroupCreation.ipynb
+++ b/docs/wrapper/GroupCreation.ipynb
@@ -105,27 +105,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "50de3a0b-2aa6-4832-8d1b-2081dad74a42",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from h5rdmtoolbox.database import hdfDB"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "c90e3188-bb22-48f3-b7dc-88bc02daa5e4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db = hdfDB(h5.hdf_filename)"
+    "from h5rdmtoolbox.database import FileDB"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "c90e3188-bb22-48f3-b7dc-88bc02daa5e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db = FileDB(h5.hdf_filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "22c37bdb-b7cd-4d58-a59a-2e478e704778",
    "metadata": {},
    "outputs": [
@@ -133,7 +133,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<LGroup \"/mygrp\" in \"C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_15\\tmp1.hdf\">\n"
+      "<LGroup \"/mygrp\" in \"C:\\Users\\da4323\\AppData\\Local\\h5rdmtoolbox\\h5rdmtoolbox\\tmp\\tmp_2\\tmp1.hdf\">\n"
      ]
     }
    ],
@@ -141,6 +141,14 @@
     "for r in db.find({'$name': {'$regex': '.*'}}, recursive=False):\n",
     "    print(r)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "976f864d-946f-47a9-bfae-47494a7495a4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
